labs/scenario/load-balancers/alb-https/k8s-ingress.yaml
---
# https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.20/#servicebackendport-v1-networking-k8s-io
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-https
  annotations:
    alb.ingress.kubernetes.io/group.name: alb-https
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.nginx-service: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"nginx-service","servicePort":"80"}]}}
    alb.ingress.kubernetes.io/conditions.nginx-service: >
      [{"field":"host-header","hostHeaderConfig":{"values":["example.com"]}}]
    alb.ingress.kubernetes.io/certificate-arn: example-certificate-arn
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: example.com
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  name: use-annotation
